# Cpp-AI-Agent

./: .gitignore  CMakeLists.txt  agent_config.json  memory.json  问题.md
HttpServer/examples/: demo_server.cpp
HttpServer/include/http/: HttpResponse.h  HttpServer.h
HttpServer/src/http/: HttpResponse.cpp  HttpServer.cpp
HttpServer/src/router/: Router.cpp
agent/: DESIGN.md
agent/include/agent/: AgentRuntime.h
agent/include/api/: ChatHandler.h  SessionHandler.h
agent/include/bus/: BusChannel.h  MessageTypes.h
agent/include/config/: ConfigManager.h
agent/include/llm/: ILLMProvider.h  LLMTypes.h  OpenAIProvider.h
agent/include/memory/: ChatMessage.h  CompositeMemory.h  GlobalMemory.h  IMemory.h  PromptBuilder.h  ShortTermMemory.h  SummaryMemory.h
agent/include/router/: ResponseRouter.h
agent/include/session/: Session.h  SessionRegistry.h
agent/include/tool/: ITool.h  MemoryTool.h  ReadFileTool.h  ToolRegistry.h  ToolResult.h  WriteFileTool.h
agent/include/utils/: TimeUtils.h
agent/src/agent/: AgentRuntime.cpp
agent/src/api/: ChatHandler.cpp  SessionHandler.cpp
agent/src/config/: ConfigManager.cpp
agent/src/llm/: OpenAIProvider.cpp
agent/src/memory/: CompositeMemory.cpp  GlobalMemory.cpp  PromptBuilder.cpp  ShortTermMemory.cpp  SummaryMemory.cpp
agent/src/router/: ResponseRouter.cpp
agent/src/session/: Session.cpp  SessionRegistry.cpp
agent/src/tool/: MemoryTool.cpp  ReadFileTool.cpp  ToolRegistry.cpp  WriteFileTool.cpp
sessions/: sess_000000.md  sess_000001.md
src/: main.cpp
static/: index.html
